Adding projects and thank you notes

--- a/architecture/index.html
+++ b/architecture/index.html
@@ -203,7 +203,7 @@
       <div class="vertical-line-blank">
       </div>
       <div class="body-right body-img float">
-        <a href="./narrow_stripes/"> <img src="./ar_02.jpg"> </a>
+        <a href="./narrow_stripes/"> <img  class="shadowAll" src="./ar_02.jpg"> </a>
       </div>
     </div>
   </div>
@@ -213,7 +213,7 @@
   <div id="ytrigger-arch3">
     <div class="body-h">
       <div class="body-left body-img float">
-        <a href="./thesis_studio/"><img src="./ar_07.jpg"></a>
+        <a href="./thesis_studio/"><img  class="shadowAll" src="./ar_07.jpg"></a>
 
       </div>
       <div class="vertical-line-blank">
@@ -247,7 +247,7 @@
     <div class="vertical-line-blank">
     </div>
     <div class="body-right body-img float">
-      <a class="t-title" href="./manifold_ground/"> <img src="./ar_04.jpg"></a>
+      <a class="t-title" href="./manifold_ground/"> <img  class="shadowAll" src="./ar_04.jpg"></a>
     </div>
   </div>
   <!--MANIFOLD GROUND -->
@@ -257,7 +257,7 @@
   <div id="ytrigger-arch5">
     <div class="body-h">
       <div class="body-left body-img float">
-        <a class="t-title" href="./recovery_of_river_edges/"> <img src="./ar_03.jpg"></a>
+        <a class="t-title" href="./recovery_of_river_edges/"> <img  class="shadowAll" src="./ar_03.jpg"></a>
       </div>
       <div class="vertical-line-blank">
       </div>
@@ -291,7 +291,7 @@
       <div class="vertical-line-blank">
       </div>
       <div class="body-right body-img float">
-        <a class="t-title-l" href="./the_rotation_of_curves/"> <img src="./ar_05.jpg"></a>
+        <a class="t-title-l" href="./the_rotation_of_curves/"> <img  class="shadowAll" src="./ar_05.jpg"></a>
       </div>
     </div>
   </div>
@@ -301,7 +301,7 @@
   <div id="ytrigger-arch7">
     <div class="body-h">
       <div class="body-left body-img float">
-        <a class="t-title-l" href="./LACAMA/"> <img src="./ar_08.jpg"></a>
+        <a class="t-title-l" href="./LACAMA/"> <img  class="shadowAll" src="./ar_08.jpg"></a>
       </div>
       <div class="vertical-line-blank">
       </div>
@@ -339,14 +339,13 @@
   </div>
 
   <!--architecture 6-->
+
   <div class="blank-lineheight-xl"></div>
 
 
-
-
-
-
-
+  <p class="tTQ center-h" data-aos="fade-up">Thanks for your time and have a good day!  </p>
+  <p class="t-text-m center-h" data-aos="fade-up">please email me for professional projects</p>
+  <div class="blank-lineheight-s"></div>
 
   <!--body-->
 
