--- a/architecture/recreation_commons/index.html
+++ b/architecture/recreation_commons/index.html
@@ -93,7 +93,7 @@
       </a>
     </div>
     <div class="head-right ">
-      <a href="/" class="inactive head-right-1550 box">
+      <a href="/project" class="inactive head-right-1550 box">
         PROJECT
       </a>
       <a href="/architecture" class="active head-right-1550 box">
@@ -119,18 +119,15 @@
 
 
     <!--diagram 1-->
-    <div class="body-h">
-      <div class="body-left body-img float">
-        <img src="diagram.jpg" alt="DIAGRAM" class="image float">
-      </div>
+    <div class="row center-v center-h">
+      <img src="diagram.jpg" alt="DIAGRAM" class="float widthXL">
 
-      <div class="body-right body-txt">
+      <div class="column">
         <P class="t-title-l">TWO VOLUMES IN ONE SPACE</P>
         <p class="horizontal-line"></p>
         <p class="t-text-m">the purpose of these two volumes is to distinguish two types of
           programs: for the public, another for private use.</p>
       </div>
-
     </div>
     <!--diagram 1-->
 
@@ -144,32 +141,26 @@
     <!-- content-->
     <br>
     <!--diagram 1-->
-    <div class="body-h">
-      <div class="body-left body-img float">
-        <img src="programs.jpg" alt="DIAGRAM" class="image float">
-      </div>
+    <div class="column center-v center-h">
+      <img src="programs.jpg" alt="DIAGRAM" class=" float">
 
-      <div class="body-right body-txt marginAll">
-        <p class="t-title-l">PRIVATE VS. PUBLIC</p>
-        <p class="horizontal-line"></p>
-        <p class="t-text-m">insert two volumes into one space two distinguish two main programs.
-          one for the public, another one for private purpose</p>
-      </div>
+      <p class="t-title-l">PRIVATE VS. PUBLIC</p>
+      <p class="horizontal-line"></p>
+      <p class="t-text-m widthL">insert two volumes into one space two distinguish two main
+        programs. one for the public, another one for private purpose</p>
 
     </div>
     <!--diagram 1-->
     <div class="blank-lineheight-xl"></div>
     <!--diagram 2-->
-    <div class="body-h">
-      <div class="body-right  body-txt marginAll">
-        <p class="t-title-l">EXERCISE VS. LEISURE</p>
-        <p class="horizontal-line"></p>
-        <p class="t-text-m">the circulation integrates the two volumes as one space. it creates a
-          dynamic view between the leisure and training sections.</p>
-      </div>
-      <div class="body-left body-img float">
-          <img src="diagram0.jpg" alt="DIAGRAM" class="image">
-      </div>
+    <div class="column center-v center-h">
+      <img src="diagram0.jpg" alt="DIAGRAM" class="float">
+
+      <p class="t-title-l">EXERCISE VS. LEISURE</p>
+      <p class="horizontal-line"></p>
+      <p class="t-text-m widthL">the circulation integrates the two volumes as one space. it creates
+        a
+        dynamic view between the leisure and training sections.</p>
     </div>
     <!--diagram 2-->
     <div class="blank-lineheight-l"></div>
@@ -201,7 +192,6 @@
         <p class="t-text-m">an opening on the southern side provides and a gap between adjacent
           build providing all-day nature daylight from the top all the way to the swimming pool at
           first floor</p>
-        <p class="t-text-m">Spring 2021</p>
       </div>
       <div class="body-left body-img float">
         <img src="diagram2.jpg" alt="DIAGRAM" class="image">
@@ -227,12 +217,9 @@
 
 
     <!--Section Perspective -->
-    <div class="body-h">
-      <div class="body-left">
-          <img src="section_perspective.jpg" alt="DIAGRAM" class="float">
-      </div>
-      <div class="vertical-line-blank">
-      </div>
+    <div class="column center-v center-h">
+      <img src="section_perspective.jpg" alt="DIAGRAM" class="float">
+
       <div class="body-right body-txt width-m">
         <P class="t-title-l">SECTION PERSPECTIVE</P>
         <p class="horizontal-line"></p>
@@ -260,7 +247,7 @@
       <div class="vertical-line-blank">
       </div>
       <div class="body-left float">
-          <img src="render_int1.jpg" alt="DIAGRAM" class="image">
+        <img src="render_int1.jpg" alt="DIAGRAM" class="image">
       </div>
     </div>
     <!--renders 2-->
@@ -268,7 +255,7 @@
     <!--renders 3-->
     <div class="body-h">
       <div class="body-left float">
-          <img src="render_int2.jpg" alt="DIAGRAM" class="image">
+        <img src="render_int2.jpg" alt="DIAGRAM" class="image">
       </div>
       <div class="vertical-line-blank">
       </div>
@@ -293,7 +280,7 @@
       <div class="vertical-line-blank">
       </div>
       <div class="body-left float">
-          <img src="render_streetview.jpg" alt="DIAGRAM" class="image">
+        <img src="render_streetview.jpg" alt="DIAGRAM" class="image">
       </div>
     </div>
     <!--renders 2-->
@@ -307,79 +294,56 @@
     </div>
     <!-- content-->
     <!--plans and sections 1-->
-    <div class="body-h">
-      <div class="body-right  body-txt">
-        <p class="t-title-l">FLOOR PLANS </p>
-        <p class="horizontal-line"></p>
-        <p class="t-text-m">F3 and F4</p>
-      </div>
-      <div class="vertical-line-blank">
-      </div>
-      <div class="body-left  float">
-        <img src="plan_f1.jpg" alt="DIAGRAM" class="image">
-      </div>
+    <div class="column center-v center-h">
+      <img src="plan_f1.jpg" alt="DIAGRAM" class="image">
+
+      <p class="t-title-l">FLOOR PLANS </p>
+      <p class="horizontal-line"></p>
+      <p class="t-text-m">F1 and F2</p>
     </div>
+
     <!--plans and sections 1-->
     <div class="blank-lineheight-xl"></div>
     <!--plans and sections 2-->
-    <div class="body-h">
-      <div class="body-right  body-txt">
-        <p class="t-title-l">FLOOR PLANS </p>
-        <p class="horizontal-line"></p>
-        <p class="t-text-m">F1 and F2</p>
-      </div>
-      <div class="vertical-line-blank">
-      </div>
-      <div class="body-left  float">
-        <img src="plan_f3.jpg" alt="DIAGRAM" class="image">
-      </div>
+    <div class="column center-v center-h">
+      <img src="plan_f3.jpg" alt="DIAGRAM" class="image">
+
+      <p class="t-title-l">FLOOR PLANS </p>
+      <p class="horizontal-line"></p>
+      <p class="t-text-m">F3 and F4</p>
+
     </div>
     <!--plans and sections 2-->
     <div class="blank-lineheight-xl"></div>
     <!--plans and sections 3-->
-    <div class="body-h">
-      <div class="body-right  body-txt">
-        <p class="t-title-l">FLOOR PLANS </p>
-        <p class="horizontal-line"></p>
-        <p class="t-text-m">F3 and F4</p>
-      </div>
-      <div class="vertical-line-blank">
-      </div>
-      <div class="body-left float">
-        <img src="plan_f5.jpg" alt="plans and sections" class="image">
-      </div>
+    <div class="column center-v center-h">
+      <img src="plan_f5.jpg" alt="plans and sections" class="image">
+
+      <p class="t-title-l">FLOOR PLANS </p>
+      <p class="horizontal-line"></p>
+      <p class="t-text-m">F5 and Facade Detail</p>
+
     </div>
     <!--plans and sections 3-->
 
     <div class="blank-lineheight-xl"></div>
     <!--plans and sections 2-->
-    <div class="body-h">
-      <div class="body-left  float">
-          <img src="sections_l.jpg" alt="DIAGRAM" class="image">
-      </div>
-      <div class="vertical-line-blank">
-      </div>
-      <div class="body-right body-txt">
-        <P class="t-title-l"> SECTIONS</P>
-        <p class="horizontal-line"></p>
-        <p class="t-text-m">F5 and Facade Detail</p>
-      </div>
+    <div class="column center-v center-h">
+      <img src="sections_l.jpg" alt="DIAGRAM" class="image">
+
+      <P class="t-title-l"> SECTIONS</P>
+      <p class="horizontal-line"></p>
+      <p class="t-text-m">F5 and Facade Detail</p>
     </div>
     <!--plans and sections 2-->
     <div class="blank-lineheight-xl"></div>
     <!--plans and sections 3-->
-    <div class="body-h">
-      <div class="body-left float">
-          <img src="section_1.jpg" alt="DIAGRAM" class="image">
-          <img src="section_2.jpg" alt="DIAGRAM" class="image">
-      </div>
-      <div class="vertical-line-blank">
-      </div>
-      <div class="body-right body-txt">
-        <P class="t-title-l">SECTIONS</P>
-        <p class="horizontal-line"></p>
-        <p class="t-text-m">F5 and Facade Detail</p>
-      </div>
+    <div class="column center-v center-h">
+      <img src="section_1.jpg" alt="Section1" class="image">
+      <img src="section_2.jpg" alt="Section2" class="image">
+      <P class="t-title-l">SECTIONS</P>
+      <p class="horizontal-line"></p>
+      <p class="t-text-m">Section Detail</p>
     </div>
     <!--plans and sections 3-->
     <!-- content-->
@@ -389,17 +353,13 @@
     </div>
     <!-- content-->
     <!--site-->
-    <div class="body-h">
-      <div class="body-right  body-txt">
-        <p class="t-title-l">SITE </p>
-        <p class="horizontal-line"></p>
-        <p class="t-text-m">110 Franklin St. San Francisco, CA, 94102</p>
-      </div>
-      <div class="vertical-line-blank">
-      </div>
-      <div class="body-left body-img float">
-        <img src="site.jpg" alt="DIAGRAM" class="image">
-      </div>
+    <div class="column center-v center-h">
+      <img src="site.jpg" alt="DIAGRAM" class="image">
+
+      <p class="t-title-l">SITE </p>
+      <p class="horizontal-line"></p>
+      <p class="t-text-m">110 Franklin St. San Francisco, CA, 94102</p>
+
     </div>
     <!--site-->
     <div class="blank-lineheight-xl"></div>
