--- a/photography/index.html
+++ b/photography/index.html
@@ -154,7 +154,7 @@ Interested in what you see? Shoot me an email :) " />
     <div id="ytrigger-pg">
       <div class="body-h">
         <div class="body-left body-img float">
-          <img src="./01.jpg">
+          <img class="shadowAll" src="./01.jpg">
         </div>
         <div class="vertical-line-blank">
         </div>
@@ -168,7 +168,7 @@ Interested in what you see? Shoot me an email :) " />
     </div>
 
     <!--Photo 1-->
-    <div class="blank-lineheight-xl"></div>
+    <div class="blankHXL"></div>
 
     <!--Photo 2-->
     <div id="ytrigger-pg2">
@@ -184,19 +184,19 @@ Interested in what you see? Shoot me an email :) " />
         <div class="vertical-line-blank">
         </div>
         <div class="body-right body-img float">
-          <img src="./02.jpg">
+          <img class="shadowAll" src="./02.jpg">
         </div>
       </div>
 
     </div>
     <!--Photo 2-->
-    <div class="blank-lineheight-xl"></div>
+    <div class="blankHXL"></div>
 
     <!--Photo 3-->
     <div id="ytrigger-pg3">
       <div class="body-h" >
         <div class="body-left body-img float">
-          <img src="./03.jpg">
+          <img class="shadowAll" src="./03.jpg">
 
         </div>
         <div class="vertical-line-blank">
@@ -211,7 +211,7 @@ Interested in what you see? Shoot me an email :) " />
 
     </div>
     <!--Photo 3-->
-    <div class="blank-lineheight-xl"></div>
+    <div class="blankHXL"></div>
 
     <!--Photo 4-->
     <div>
@@ -228,20 +228,20 @@ Interested in what you see? Shoot me an email :) " />
         <div class="vertical-line-blank">
         </div>
         <div class="body-right body-img float">
-          <img src="./04.jpg">
+          <img class="shadowAll" src="./04.jpg">
 
         </div>
       </div>
     </div>
 
     <!--Photo 4-->
-    <div class="blank-lineheight-xl"></div>
+    <div class="blankHXL"></div>
 
     <!--Photo 5-->
     <div >
       <div class="body-h" id="ytrigger-pg5">
         <div class="body-left body-img float">
-          <img src="./05.jpg">
+          <img class="shadowAll" src="./05.jpg">
 
         </div>
         <div class="vertical-line-blank">
@@ -256,7 +256,7 @@ Interested in what you see? Shoot me an email :) " />
 
     </div>
     <!--Photo 5-->
-    <div class="blank-lineheight-xl"></div>
+    <div class="blankHXL"></div>
 
     <!--Photo 6-->
     <div id="ytrigger-pg6">
@@ -272,19 +272,19 @@ Interested in what you see? Shoot me an email :) " />
         <div class="vertical-line-blank">
         </div>
         <div class="body-right body-img float">
-          <img src="./06.jpg">
+          <img class="shadowAll" src="./06.jpg">
         </div>
 
       </div>
     </div>
     <!--Photo 6-->
-    <div class="blank-lineheight-xl"></div>
+    <div class="blankHXL"></div>
 
     <!--Photo 7-->
     <div id="ytrigger-pg7">
       <div class="body-h">
         <div class="body-left body-img float">
-          <img src="./07.jpg">
+          <img class="shadowAll" src="./07.jpg">
 
         </div>
         <div class="vertical-line-blank">
@@ -299,7 +299,7 @@ Interested in what you see? Shoot me an email :) " />
     </div>
 
   <!--Photo 7-->
-  <div class="blank-lineheight-xl"></div>
+  <div class="blankHXL"></div>
 
   <!--Photo 8-->
   <div id="ytrigger-pg8">
@@ -316,20 +316,20 @@ Interested in what you see? Shoot me an email :) " />
       <div class="vertical-line-blank">
       </div>
       <div class="body-right body-img float">
-        <img src="./08.jpg">
+        <img class="shadowAll" src="./08.jpg">
       </div>
 
     </div>
   </div>
   <!--Photo 8-->
-  <div class="blank-lineheight-xl"></div>
+  <div class="blankHXL"></div>
 
   <!--Photo 9-->
   <div id="ytrigger-pg9">
 
     <div class="body-h">
       <div class="body-left body-img float">
-        <img src="./09.jpg">
+        <img class="shadowAll" src="./09.jpg">
 
       </div>
       <div class="vertical-line-blank">
@@ -343,7 +343,7 @@ Interested in what you see? Shoot me an email :) " />
     </div>
   </div>
   <!--Photo 9-->
-  <div class="blank-lineheight-xl"></div>
+  <div class="blankHXL"></div>
 
   <!--Photo 10-->
   <div id="ytrigger-pg10">
@@ -360,20 +360,20 @@ Interested in what you see? Shoot me an email :) " />
       <div class="vertical-line-blank">
       </div>
       <div class="body-right body-img float">
-        <img src="./10.jpg">
+        <img class="shadowAll" src="./10.jpg">
 
       </div>
     </div>
   </div>
   <!--Photo 10-->
-  <div class="blank-lineheight-xl"></div>
+  <div class="blankHXL"></div>
 
   <!--Photo 11-->
   <div id="ytrigger-pg11">
 
     <div class="body-h">
       <div class="body-left body-img float">
-        <img src="./11.jpg">
+        <img class="shadowAll" src="./11.jpg">
 
       </div>
       <div class="vertical-line-blank">
@@ -387,7 +387,7 @@ Interested in what you see? Shoot me an email :) " />
     </div>
   </div>
   <!--Photo 11-->
-  <div class="blank-lineheight-xl"></div>
+  <div class="blankHXL"></div>
 
   <!--Photo 12-->
 
@@ -402,7 +402,7 @@ Interested in what you see? Shoot me an email :) " />
     <div class="vertical-line-blank">
     </div>
     <div class="body-right body-img float">
-      <img src="./12.jpg">
+      <img class="shadowAll" src="./12.jpg">
 
     </div>
   </div>
@@ -411,14 +411,14 @@ Interested in what you see? Shoot me an email :) " />
 
 
 
-  <div class="blank-lineheight-xl"></div>
+  <div class="blankHXL"></div>
 
   <!--Photo 13-->
   <div id="ytrigger-pg13">
 
     <div class="body-h">
       <div class="body-left body-img float">
-        <img src="./13.jpg">
+        <img class="shadowAll" src="./13.jpg">
 
       </div>
       <div class="vertical-line-blank">
@@ -432,7 +432,7 @@ Interested in what you see? Shoot me an email :) " />
     </div>
   </div>
   <!--Photo 13-->
-  <div class="blank-lineheight-xl"></div>
+  <div class="blankHXL"></div>
 
   <!--Photo 14-->
   <div id="ytrigger-pg14">
@@ -450,21 +450,21 @@ Interested in what you see? Shoot me an email :) " />
       <div class="vertical-line-blank">
       </div>
       <div class="body-right body-img float">
-        <img src="./14.jpg">
+        <img class="shadowAll" src="./14.jpg">
 
       </div>
     </div>
   </div>
   <!--Photo 14-->
 
-  <div class="blank-lineheight-xl"></div>
+  <div class="blankHXL"></div>
 
   <!--Photo 15-->
   <div id="ytrigger-pg15">
 
     <div class="body-h">
       <div class="body-left body-img float">
-        <img src="./15.jpg">
+        <img class="shadowAll"src="./15.jpg">
 
       </div>
       <div class="vertical-line-blank">
@@ -478,7 +478,7 @@ Interested in what you see? Shoot me an email :) " />
     </div>
   </div>
   <!--Photo 15-->
-  <div class="blank-lineheight-xl"></div>
+  <div class="blankHXL"></div>
 
   <!--Photo 16-->
   <div id="ytrigger-pg16">
@@ -495,7 +495,7 @@ Interested in what you see? Shoot me an email :) " />
       <div class="vertical-line-blank">
       </div>
       <div class="body-right body-img float">
-        <img src="./16.jpg">
+        <img class="shadowAll" src="./16.jpg">
 
       </div>
     </div>
@@ -503,14 +503,14 @@ Interested in what you see? Shoot me an email :) " />
   <!--Photo 16-->
 
 
-  <div class="blank-lineheight-xl"></div>
+  <div class="blankHXL"></div>
 
   <!--Photo 17-->
   <div id="ytrigger-pg17">
 
     <div class="body-h">
       <div class="body-left body-img float">
-        <img src="./17.jpg">
+        <img class="shadowAll" src="./17.jpg">
 
       </div>
       <div class="vertical-line-blank">
@@ -524,7 +524,7 @@ Interested in what you see? Shoot me an email :) " />
     </div>
   </div>
   <!--Photo 17-->
-  <div class="blank-lineheight-xl"></div>
+  <div class="blankHXL"></div>
 
   <!--Photo 18-->
   <div id="ytrigger-pg18">
@@ -541,12 +541,21 @@ Interested in what you see? Shoot me an email :) " />
       <div class="vertical-line-blank">
       </div>
       <div class="body-right  float">
-        <img src="./19.jpg" class="body-img-v">
+        <img class="shadowAll" src="./19.jpg" class="body-img-v">
 
       </div>
     </div>
   </div>
   <!--Photo 18-->
+  <div class="blankHL"></div>
+
+  <div class="blankHL"></div>
+
+  <p class="tTQ center-h" data-aos="fade-up">Thanks for your time and have a good day!  </p>
+  <p class="t-text-m center-h" data-aos="fade-up">More coming soon</p>
+
+
+
 
 
   <!--back to top-->
