--- a/project/gardeners_hub/index.html
+++ b/project/gardeners_hub/index.html
@@ -144,58 +144,67 @@
 
 
   <!-- content-->
-  <div class="marginAll">
-    <div class="content-tl adding-margintop">
-      <p class="t-text-l"> Initial Concepts </p>
-      <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
-    </div>
+  <div class="row marginInner item-height-m center-v">
+    <p class="t-text-l"> Initial Concepts </p>
+    <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
   </div>
   <!-- content-->
   <!-- initial concepts -->
 
-  <div class="row center-h bg-color-gh1 align-bottom " id="bg-color-opc">
-    <div
-      class="column center-v align-top color-grey border-radius item-height-l width-m padding-lr float">
-      <img class="icon-m" src="icon_concepts1.svg" alt="User Research" class="image">
-      <P class="h-line"> </P>
-      <P class="t-title-m"> Share &amp; Sell </P>
-      <P class="t-text-s"> &#183; Plants Nearby / Map</P>
-      <P class="t-text-s"> &#183; Plants by Type</P>
-      <P class="t-text-s"> &#183; Plants by Lighting Condition</P>
-      <P class="t-text-s"> &#183; Plants by Indoor and Outdoor</P>
-    </div>
-    <div
-      class="column center-v align-top color-grey border-radius item-height-l width-m padding-lr float">
-      <img class="icon-m" src="icon_concepts2.svg" alt="User Research" class="image">
-      <P class="h-line"> </P>
-      <P class="t-title-m"> Social Network </P>
-      <P class="t-text-s"> &#183; Local Social Network</P>
-      <P class="t-text-s"> &#183; Sharing Experiences</P>
-      <P class="t-text-s"> &#183; Sharing Gardening Tools</P>
-      <P class="t-text-s"> &#183; Sharing Plant Decoration Ideas</P>
-    </div>
-    <div
-      class="column center-v align-top color-grey border-radius item-height-l width-m padding-lr float">
-      <img class="icon-m" src="icon_concepts3.svg" alt="User Research" class="image">
-      <P class="h-line"> </P>
-      <P class="t-title-m"> Plant Profile </P>
-      <P class="t-text-s"> &#183; Plant Photos / Identify plants</P>
-      <P class="t-text-s"> &#183; Watering</P>
-      <P class="t-text-s"> &#183; Light</P>
-      <P class="t-text-s"> &#183; Soil</P>
-      <P class="t-text-s"> &#183; Ventilation</P>
-    </div>
-    <div
-      class="column center-v align-top color-grey border-radius item-height-l width-m padding-lr float">
-      <img class="icon-m" src="icon_concepts4.svg" alt="User Research" class="image">
-      <P class="h-line"> </P>
-      <P class="t-title-m"> Plant Care </P>
-      <P class="t-text-s"> &#183; Plants Nearby / Map</P>
-      <P class="t-text-s"> &#183; Plants by Type</P>
-      <P class="t-text-s"> &#183; Plants by Lighting Condition</P>
-      <P class="t-text-s"> &#183; Plants by Indoor and Outdoor</P>
+  <div class="bg-color-gh1 align-bottom" id="bg-color-opc">
+    <div class="marginAll row center-h ">
+
+
+      <div
+        class="column center-v align-top color-grey border-radius item-height-l width-m padding-lr float">
+        <img class="icon-m" src="icon_concepts1.svg" alt="User Research" class="image">
+        <P class="h-line"> </P>
+        <P class="t-title-m"> Share &amp; Sell </P>
+        <div class="blank-lineheight-s"></div>
+
+        <P class="t-text-s"> &#183; Plants Nearby / Map</P>
+        <P class="t-text-s"> &#183; Plants by Type</P>
+        <P class="t-text-s"> &#183; Plants by Light Condition</P>
+        <P class="t-text-s"> &#183; Plants by Indoor and Outdoor</P>
+      </div>
+      <div
+        class="column center-v align-top color-grey border-radius item-height-l width-m padding-lr float">
+        <img class="icon-m" src="icon_concepts2.svg" alt="User Research" class="image">
+        <P class="h-line"> </P>
+        <P class="t-title-m"> Social Network </P>
+        <div class="blank-lineheight-s"></div>
+        <P class="t-text-s"> &#183; Local Social Network</P>
+        <P class="t-text-s"> &#183; Sharing Experiences</P>
+        <P class="t-text-s"> &#183; Sharing Gardening Tools</P>
+        <P class="t-text-s"> &#183; Sharing Decoration Ideas</P>
+      </div>
+      <div
+        class="column center-v align-top color-grey border-radius item-height-l width-m padding-lr float">
+        <img class="icon-m" src="icon_concepts3.svg" alt="User Research" class="image">
+        <P class="h-line"> </P>
+        <P class="t-title-m"> Plant Profile </P>
+        <div class="blank-lineheight-s"></div>
+
+        <P class="t-text-s"> &#183; Photos / Identify plants</P>
+        <P class="t-text-s"> &#183; Watering</P>
+        <P class="t-text-s"> &#183; Light and Soil</P>
+        <P class="t-text-s"> &#183; Ventilation</P>
+      </div>
+      <div
+        class="column center-v align-top color-grey border-radius item-height-l width-m padding-lr float">
+        <img class="icon-m" src="icon_concepts4.svg" alt="User Research" class="image">
+        <P class="h-line"> </P>
+        <P class="t-title-m"> Plant Care </P>
+        <div class="blank-lineheight-s"></div>
+
+        <P class="t-text-s"> &#183; Plants Nearby / Map</P>
+        <P class="t-text-s"> &#183; Plants by Type</P>
+        <P class="t-text-s"> &#183; Plants by Lighting Condition</P>
+        <P class="t-text-s"> &#183; Plants by Indoor and Outdoor</P>
+      </div>
     </div>
   </div>
+
   <!-- initial concepts -->
 
 
@@ -304,8 +313,9 @@
       <div class="column">
         <P class="t-title-l">PROBLEMS</P>
         <p class="horizontal-line"></p>
-        <p class="t-text-m width-l">Gardeners Hub Application aims to build the local market network and
-          improve the horticultural experience by offering more comprehensive local market
+        <p class="t-text-m width-mm">Gardeners Hub Application aims to build the local market
+          network
+          and improve the horticultural experience by offering more comprehensive local market
           networking opportunities to the gardeners that result in reducing wasting resources and
           preventing establishment failure by improving learning and sharing experience. An
           overwhelming of resources and misunderstanding that result in failure horticultural
@@ -1101,7 +1111,7 @@
     </div>
   </div>
 
-<div class="blank-lineheight-m"></div>
+  <div class="blank-lineheight-m"></div>
   <div class="row center-h bg-color-gh1 align-bottom" id="bg-color-opc1">
     <div
       class="column center-v align-top color-grey border-radius item-height-l width-m padding float">
@@ -2582,67 +2592,75 @@
   <div class="blank-lineheight-l"></div>
 
   <!-- initial concepts -->
-  <div class="marginAll">
-    <div class="column marginAll">
-      <P class="t-title-m">PURPOSE OF THE APP </P>
-      <div class="blank-lineheight-s"></div>
+  <div class="marginAll column">
+    <P class="t-title-m">PURPOSE OF THE APP </P>
+    <div class="blank-lineheight-s"></div>
 
-      <p class="t-text-m">Gardeners hub helps the local community developing a horticultural
-        marketplace and a relationship between gardeners.Gardeners Hub Application aims to build
-        the local market network and improve the horticultural experience by offering more
-        comprehensive
-        local market networking opportunities to the gardeners that result in reducing wasting
-        resources and
-        preventing establishment failure by improving learning and sharing experience. An
-        overwhelming of resources and misunderstanding that result in failure horticultural
-        experience by those
-        involved in the horticultural process.</p>
-    </div>
+    <p class="t-text-m">Gardeners hub helps the local community developing a horticultural
+      marketplace and a relationship between gardeners.Gardeners Hub Application aims to build
+      the local market network and improve the horticultural experience by offering more
+      comprehensive
+      local market networking opportunities to the gardeners that result in reducing wasting
+      resources and
+      preventing establishment failure by improving learning and sharing experience. An
+      overwhelming of resources and misunderstanding that result in failure horticultural
+      experience by those
+      involved in the horticultural process.</p>
   </div>
 
   <div class="blank-lineheight-l"></div>
 
-  <div class="row center-h bg-color-gh1 align-bottom" id="bg-color-opc2">
-    <div
-      class="column center-v align-top color-grey border-radius item-height-l width-m padding-lr float">
-      <img class="icon-m " src="icon_concepts1.svg" alt="User Research" class="image">
-      <P class="h-line"> </P>
-      <P class="t-title-m"> Share &amp; Sell </P>
-      <P class="t-text-s"> &#183; Plants Nearby / Map</P>
-      <P class="t-text-s"> &#183; Plants by Type</P>
-      <P class="t-text-s"> &#183; Plants by Lighting Condition</P>
-      <P class="t-text-s"> &#183; Plants by Indoor and Outdoor</P>
-    </div>
-    <div
-      class="column center-v align-top color-grey border-radius item-height-l width-m padding-lr float">
-      <img class="icon-m " src="icon_concepts2.svg" alt="User Research" class="image">
-      <P class="h-line"> </P>
-      <P class="t-title-m"> Local Social Network </P>
-      <P class="t-text-s"> &#183; Local Social Network</P>
-      <P class="t-text-s"> &#183; Sharing Experiences</P>
-      <P class="t-text-s"> &#183; Sharing Gardening Tools</P>
-      <P class="t-text-s"> &#183; Sharing Plant Decoration Ideas</P>
-    </div>
-    <div
-      class="column center-v align-top color-grey border-radius item-height-l width-m padding-lr float ">
-      <img class="icon-m " src="icon_concepts3.svg" alt="User Research" class="image">
-      <P class="h-line"> </P>
-      <P class="t-title-m"> Plant Profile </P>
-      <P class="t-text-s"> &#183; Plant Photos / Identify plants</P>
-      <P class="t-text-s"> &#183; Watering</P>
-      <P class="t-text-s"> &#183; Light</P>
-      <P class="t-text-s"> &#183; Soil</P>
-      <P class="t-text-s"> &#183; Ventilation</P>
-    </div>
-    <div
-      class="column center-v align-top color-grey border-radius item-height-l width-m padding-lr float">
-      <img class="icon-m " src="icon_concepts4.svg" alt="User Research" class="image">
-      <P class="h-line"> </P>
-      <P class="t-title-m"> Plant Care </P>
-      <P class="t-text-s"> &#183; Plants Nearby / Map</P>
-      <P class="t-text-s"> &#183; Plants by Type</P>
-      <P class="t-text-s"> &#183; Plants by Lighting Condition</P>
-      <P class="t-text-s"> &#183; Plants by Indoor and Outdoor</P>
+  <div class="bg-color-gh1 align-bottom" id="bg-color-opc2">
+    <div class="marginAll row center-h ">
+
+
+      <div
+        class="column center-v align-top color-grey border-radius item-height-l width-m padding-lr float">
+        <img class="icon-m" src="icon_concepts1.svg" alt="User Research" class="image">
+        <P class="h-line"> </P>
+        <P class="t-title-m"> Share &amp; Sell </P>
+        <div class="blank-lineheight-s"></div>
+
+        <P class="t-text-s"> &#183; Plants Nearby / Map</P>
+        <P class="t-text-s"> &#183; Plants by Type</P>
+        <P class="t-text-s"> &#183; Plants by Light Condition</P>
+        <P class="t-text-s"> &#183; Plants by Indoor and Outdoor</P>
+      </div>
+      <div
+        class="column center-v align-top color-grey border-radius item-height-l width-m padding-lr float">
+        <img class="icon-m" src="icon_concepts2.svg" alt="User Research" class="image">
+        <P class="h-line"> </P>
+        <P class="t-title-m"> Social Network </P>
+        <div class="blank-lineheight-s"></div>
+        <P class="t-text-s"> &#183; Local Social Network</P>
+        <P class="t-text-s"> &#183; Sharing Experiences</P>
+        <P class="t-text-s"> &#183; Sharing Gardening Tools</P>
+        <P class="t-text-s"> &#183; Sharing Decoration Ideas</P>
+      </div>
+      <div
+        class="column center-v align-top color-grey border-radius item-height-l width-m padding-lr float">
+        <img class="icon-m" src="icon_concepts3.svg" alt="User Research" class="image">
+        <P class="h-line"> </P>
+        <P class="t-title-m"> Plant Profile </P>
+        <div class="blank-lineheight-s"></div>
+
+        <P class="t-text-s"> &#183; Photos / Identify plants</P>
+        <P class="t-text-s"> &#183; Watering</P>
+        <P class="t-text-s"> &#183; Light and Soil</P>
+        <P class="t-text-s"> &#183; Ventilation</P>
+      </div>
+      <div
+        class="column center-v align-top color-grey border-radius item-height-l width-m padding-lr float">
+        <img class="icon-m" src="icon_concepts4.svg" alt="User Research" class="image">
+        <P class="h-line"> </P>
+        <P class="t-title-m"> Plant Care </P>
+        <div class="blank-lineheight-s"></div>
+
+        <P class="t-text-s"> &#183; Plants Nearby / Map</P>
+        <P class="t-text-s"> &#183; Plants by Type</P>
+        <P class="t-text-s"> &#183; Plants by Lighting Condition</P>
+        <P class="t-text-s"> &#183; Plants by Indoor and Outdoor</P>
+      </div>
     </div>
   </div>
   <!-- initial concepts -->
@@ -2799,11 +2817,13 @@
 
   <!-- wireframes hi-fi -->
 
+
   <div class="bg-color-gh-carouselGH">
 
     <div class="blank-lineheight-m"></div>
-
-    <P class="t-title-m marginAll">HIGH-FIDELITY WIREFRAMES </P>
+    <div class="marginAll">
+      <P class="t-title-m ">HIGH-FIDELITY WIREFRAMES </P>
+    </div>
 
     <div class="carouselGH">
       <div class="nav-gh nav-left-gh">
