--- a/project/index.html
+++ b/project/index.html
@@ -158,71 +158,138 @@
     <img class="se-arrow" src="../arrow-se.svg" alt="se-arrow">
   </div>
   <!-- content-->
-
+  <div class="blankHL"></div>
   <!--MEAL PLANNER-->
-  <div id="ytrigger1">
+  <div id="ytrigger3">
 
-    <div class="body-h">
-      <div class="body-right body-txt marginAll">
-        <a href="/project/meal_planner" class="t-title-l" data-aos="fade-up">MEAL PLANNER</a>
-        <p class="horizontal-line"></p>
-
-        <p class="t-text-m">A mobile app helps planning a healthy meal</p>
-        <p class="t-text-m">May 2021 - August 2021</p>
-      </div>
-      <div class="body-left  float">
+    <div class="row center-v center-h marginAll">
+      <div class="float">
         <a href="/project/meal_planner">
           <img src="../layout_mealplanner.png" alt="Meal Planner">
         </a>
       </div>
+
+      <div class="body-right body-txt">
+        <a href="/project/meal_planner" class="t-title-l" data-aos="fade-up">MEAL PLANNER</a>
+        <p class="horizontal-line"></p>
+        <p class="t-text-m">A mobile app helps planning a healthy meal</p>
+        <p class="t-text-m">May 2021 - August 2021</p>
+      </div>
     </div>
   </div>
   <!--MEAL PLANNER-->
-  <div class="blank-lineheight-xl"></div>
+  <div class="blankHL"></div>
   <!--GARDENERS HUB-->
-  <div id="ytrigger">
-    <div class="body-h">
-      <div class="body-left float">
-        <a href="/project/gardeners_hub">
-          <img src="../layout_gardenershub.png" alt="Gardeners' Hub">
-        </a>
-      </div>
+  <div id="ytrigger4">
+    <div class="row center-v center-h marginAll">
 
-      <div class="body-right body-txt marginAll">
+
+      <div class="column">
         <a href="/project/gardeners_hub" class="t-title-l" data-aos="fade-up">GARDENERS HUB</a>
         <p class="horizontal-line"></p>
         <p class="t-text-m">A marketplace for local community</p>
         <p class="t-text-m">May 2021 - August 2021</p>
       </div>
-    </div>
-
-  </div>
-  <!--GARDENERS HUB-->
-  <div class="blank-lineheight-xl"></div>
-
-  <!--ALLTRAILS-->
-  <div id="ytrigger2">
-
-    <div class="body-h">
+      <div class="vertical-line-blank"></div>
 
       <div class="body-left float">
-        <p href="/alltrails">
-          <img class="width-l" src="../layout_alltrails.jpg" alt="Redesign AllTrails">
+        <a href="/project/gardeners_hub">
+          <img class="widthXL" src="../layout_gardenershub.png" alt="Gardeners' Hub">
+        </a>
+      </div>
+    </div>
+  </div>
+  <!--GARDENERS HUB-->
+
+  <div class="blankHL"></div>
+
+  <!--APPOINTMENTMAKER-->
+  <div id="ytrigger">
+    <div class="row center-v center-h marginAll">
+      <div class="float">
+        <a href="/project/appointment_maker">
+          <img class="widthXL" src="../layout_AppointmentMaker.png" alt="Appointment Maker">
+        </a>
+      </div>
+      <div class="vertical-line-blank"></div>
+
+      <div class="column">
+        <a href="/project/appointment_maker" class="t-title-l" data-aos="fade-up">Appointment
+          Maker</a>
+        <p class="horizontal-line"></p>
+        <p class="t-text-s"> <strong>Project:</strong> &nbsp; Google UX Certificate Project 1</p>
+        <p class="t-text-s"> <strong>About:</strong> &nbsp; A scheduling app for making appointment
+          makers</p>
+        <p class="t-text-s"> <strong>Duration:</strong> &nbsp; 4 Weeks</p>
+        <p class="t-text-m">Coming Soon</p>
+
+      </div>
+    </div>
+  </div>
+  <!--APPOINTMENTMAKER-->
+  <div class="blankHL"></div>
+
+  <!--Responsive Web-->
+  <div id="ytrigger1">
+
+
+    <div class="row center-v center-h marginAll">
+
+      <div class="column">
+        <p href="/project/indie" class="t-title-l" data-aos="fade-up">Indie Rock bands</p>
+        <p class="horizontal-line"></p>
+        <p class="t-text-s"> <strong>Project:</strong> &nbsp; Google UX Certificate Project 2</p>
+        <p class="t-text-s"> <strong>About:</strong> &nbsp; A responsive website for album listening
+          & ordering for Indie Rock bands</p>
+        <p class="t-text-s"> <strong>Duration:</strong> &nbsp; 4 Weeks</p>
+        <p class="t-text-m">Coming Soon</p>
+      </div>
+      <div class="vertical-line-blank"></div>
+
+
+      <div class="float">
+        <p href="/project/indie">
+          <img class="widthXL" src="../layout_IndieRockbands.png" alt="Meal Planner">
+        </p>
+      </div>
+
+    </div>
+  </div>
+  <!--Responsive Web-->
+  <div class="blankHL"></div>
+
+  <!--Social Good-->
+  <div id="ytrigger2">
+
+    <div class="row center-v marginAll">
+
+      <div class="float">
+        <p href="/project/meal_planner">
+          <img class="widthXL" src="../layout_MedicationReminder.png" alt="Meal Planner">
         </p>
       </div>
       <div class="vertical-line-blank"></div>
 
-      <div class="body-right body-txt marginAll">
-        <p href="/alltrails" class="t-title-l" data-aos="fade-up">REDESIGN ALLTRAILS APP</p>
+      <div class="column">
+        <p href="/project/meal_planner" class="t-title-l" data-aos="fade-up">Medication Reminder</p>
         <p class="horizontal-line"></p>
-
+        <p class="t-text-s"> <strong>Project:</strong> &nbsp; Google UX Certificate Project 3</p>
+        <p class="t-text-s"> <strong>About:</strong> &nbsp; A cross-platform to help people remember
+          to take medicine on time</p>
+        <p class="t-text-s"> <strong>Duration:</strong> &nbsp; 4 Weeks</p>
         <p class="t-text-m">Coming Soon</p>
       </div>
     </div>
   </div>
-  <!--ALLTRAILS-->
-  <div class="blank-lineheight-xl"></div>
+  <!--Social Good-->
+  <div class="blankHL"></div>
 
+  <p class="tTQ center-h" data-aos="fade-up">Thanks for your time and have a good day!  </p>
+  <p class="t-text-m center-H" data-aos="fade-up">More coming soon</p>
+
+
+
+  <div class="blank-lineheight-xl"></div>
 
 
 
