--- a/project/meal_planner/index.html
+++ b/project/meal_planner/index.html
@@ -421,7 +421,6 @@
           </div>
         </div>
 
-
         <div class="MPslide center-h hfSlide">
           <div class="clip-shape-shadow">
             <div class="clip-shape width-ll"><img src="hf_signin.svg"></div>
@@ -432,7 +431,6 @@
             <div class="clip-shape width-ll"><img src="hf_signin1.svg"></div>
           </div>
         </div>
-
 
         <div class="MPslide center-h hfSlide">
           <div class="clip-shape-shadow">
@@ -504,11 +502,11 @@
           </div>
         </div>
 
-
-
-
-
       </div>
+
+
+      <span  class="MPcircle MPfloat"></span>
+
       <div class="MPnav MPnav-right hfRight">
       </div>
     </div>
@@ -521,7 +519,7 @@
     <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
   </div>
   <!-- content-->
-  
+
   <!--Problem and solution-->
 
   <div class="marginAll">
@@ -601,20 +599,19 @@
 
   <!--body1-->
 
-  <br>
-  <br>
-  <br>
+  <div class="blank-lineheight-l"></div>
+
   <div CLASS="marginAll column">
     <P class="t-title-m">USER CENTERED DESIGN PROCESS</P>
     <p class="horizontal-line"></p>
 
-    <br> <br>
+    <div class="blank-lineheight-m"></div>
 
     <div class="row center-h ">
 
       <div class="column center-v">
         <P class="center-v center-h color-grey circle-mp t-subtitle-l float">Empathize </P>
-        <br>
+        <div class="blank-lineheight-m"></div>
         <div class="column align-left">
           <ul class="row align-top">
             <img class="icon-list" src="list.svg" alt="&bull;">
@@ -635,7 +632,7 @@
 
       <div class="column center-v">
         <P class="center-v center-h color-grey circle-mp  t-subtitle-l float">Define </P>
-        <br>
+        <div class="blank-lineheight-m"></div>
         <div class="column align-left">
           <ul class="row align-top">
             <img class="icon-list" src="list.svg" alt="&bull;">
@@ -659,7 +656,7 @@
 
       <div class="column center-v">
         <P class="center-v center-h color-grey circle-mp  t-subtitle-l float">Ideate </P>
-        <br>
+        <div class="blank-lineheight-m"></div>
         <div class="column align-left">
 
           <ul class="row align-top">
@@ -684,7 +681,7 @@
       <div class="column center-v">
         <P class="center-v center-h color-grey circle-mp  t-subtitle-l float">Prototype
         </P>
-        <br>
+        <div class="blank-lineheight-m"></div>
         <div class="column align-left">
 
           <ul class="row align-top">
@@ -709,7 +706,7 @@
 
       <div class="column center-v">
         <P class="center-v center-h color-grey circle-mp  t-subtitle-l float">Final Design </P>
-        <br>
+        <div class="blank-lineheight-m"></div>
         <div class="column align-left">
 
           <ul class="row center-v">
@@ -889,10 +886,8 @@
     <br>
 
   </div>
-  <br>
-  <br>
-  <br>
-  <br>
+  <div class="blank-lineheight-l"></div>
+
 
   <!-- STRATEGY -->
   <div class="column marginAll">
@@ -900,11 +895,93 @@
       <P class="t-title-m">USER RESEARCH </P>
       <img class="icon-s float" src="icon_mp_1-2.svg" alt="User Research" class="image">
     </div>
-    <p class="t-text-m">I have conducted 10+ user interviews and collected viable information from
-      them towards cooking own food easier
-    </p>
+
+
+    <div class="blank-lineheight-s"></div>
+
+
+
+
+    <P class="t-title-m">Conduct user interviews </P>
+    <p class="t-text-m">Empathizing with users and defining pain points </p>
+    <div class="blank-lineheight-l"></div>
+
+
+    <div class="row-change align-top center-h-spacearound">
+
+      <div class="row align-top color-grey border-radius padding-s itemHtXL">
+        <img class="icon-list" src="list.svg" alt="&bull;">
+
+        <div class="column widthMM">
+          <P class="t-title-m">Interview goals: </P>
+          <div class="blank-lineheight-s"></div>
+
+          <ul>
+            <li class="t-text-m">I want to understand common challenges people face trying to manage
+              a busy schedule and meal planning. </li>
+            <div class="blank-lineheight-s"></div>
+
+            <li class="t-text-m">I want to identify frustrations people experience during the
+              process
+              of ordering from a restaurant. </li>
+          </ul>
+        </div>
+      </div>
+      <div class="row align-top color-grey border-radius padding-s itemHtXL">
+        <img class="icon-list" src="list.svg" alt="&bull;">
+
+        <div class="column widthMM">
+          <P class="t-title-m">Interview questions: </P>
+          <div class="blank-lineheight-s"></div>
+
+          <ul>
+            <li class="t-text-m">Can you describe your current schedule and how you balance your
+              responsibilities with meal planning? </li>
+            <div class="blank-lineheight-s"></div>
+
+            <li class="t-text-m">How often do you cook at home? When you do, what is
+              your motivation for doing so?</li>
+            <div class="blank-lineheight-s"></div>
+
+            <li class="t-text-m">What challenges do you face in the cooking process? How does this
+              make you feel?</li>
+            <div class="blank-lineheight-s"></div>
+
+            <li class="t-text-m">Is there any way in which you feel these challenges could be
+              resolved?</li>
+          </ul>
+        </div>
+      </div>
+      <div class="row align-top color-grey border-radius padding-s itemHtXL">
+        <img class="icon-list" src="list.svg" alt="&bull;">
+
+        <div class="column widthMM">
+          <P class="t-title-m">Target participant characteristics: </P>
+          <div class="blank-lineheight-s"></div>
+
+          <ul>
+            <li class="t-text-m">Ages 18-68</li>
+            <div class="blank-lineheight-s"></div>
+
+            <li class="t-text-m">Lives in metropolitan or suburban areas</li>
+            <div class="blank-lineheight-s"></div>
+
+            <li class="t-text-m">People who cook food at home at least once a week </li>
+            <div class="blank-lineheight-s"></div>
+
+            <li class="t-text-m">Include participants of different genders </li>
+            <div class="blank-lineheight-s"></div>
+
+            <li class="t-text-m">Include participants with different abilities </li>
+
+          </ul>
+        </div>
+      </div>
+    </div>
   </div>
-  <br>
+  <div class="blank-lineheight-l"></div>
+
+
 
   <div class="column marginAll">
 
@@ -1173,7 +1250,7 @@
     <P class="text-project-numbers color-mp">03</P>
 
     <div class="row-change center-v">
-      <div class="column">Î
+      <div class="column">
         <P class="t-title-l">IDEATION</P>
         <p class="horizontal-line"></p>
         <p class="t-text-m"> Ideation is the most exciting stage, based on my previous study of
