--- a/architecture/narrow_stripes/index.html
+++ b/architecture/narrow_stripes/index.html
@@ -93,7 +93,7 @@
       </a>
     </div>
     <div class="head-right ">
-      <a href="/" class="inactive head-right-1550 box">
+      <a href="/project" class="inactive head-right-1550 box">
         PROJECT
       </a>
       <a href="/architecture" class="active head-right-1550 box">
